2004-08-30  Bruno Haible  <bruno@clisp.org>

	* spvw.d (program_name): Change type to 'const char *'.
	(usage): Remove quit_sofort() call at the end.
	(init_lowest_level, fini_lowest_level): New functions.
	(struct argv_init_c): New type.
	(struct argv_initparams): New type.
	(struct argv_actions): New type.
	(argv_verbose, argv_wait_keypress, argv_license): Remov variables.
	(parse_options): New function, extracted from main(). Signal an error when an
	invalid option beginning with "-r" is seen.
	(free_argv_initparams, free_argv_actions): New functions.
	(argv1, argv2): New variables.
	(main): Use parse_options.

2004-07-11  Bruno Haible  <bruno@clisp.org>

	* clos.lisp: Set *allow-making-generic* to t while bootstrapping.
	* clos-slotdef3.lisp: No need to use fmakunbound here.
	* clos-specializer3.lisp: Likewise.
	* clos-class6.lisp: No need to bind *allow-making-generic* or use
	fmakunbound here.
	* clos-methcomb4.lisp: No need to bind *allow-making-generic* here.
	* clos-genfun5.lisp: Likewise.
	* clos-print.lisp: No need to use fmakunbound here.

2004-07-11  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2.lisp (|#'allocate-instance|, |#'initialize-instance|)
	(|#'reinitialize-instance|, |#'update-instance-for-redefined-class|)
	(|#'update-instance-for-different-class|, |#'shared-initialize|)
	(*gf-warn-on-replacing-method*): New variables, moved here from
	clos-genfun3.lisp.
	(methods-agree-p, gf-lambdalist-from-first-method, std-add-method)
	(std-remove-method, std-find-method): New functions, moved here
	from clos-genfun3.lisp.
	(initialize-instance-<standard-generic-function>): Remove function.
	(initialize-instance-<generic-function>): New function, extracted from
	ensure-generic-function-using-class-<t>.
	(reinitialize-instance-<generic-function>): New function, extracted
	from ensure-generic-function-using-class-<t>.
	(make-instance-<standard-generic-function>): Update.
	* clos-genfun3.lisp (|#'allocate-instance|, |#'initialize-instance|)